Importing changings from v1_9_2 tag.

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,11 @@ Mon Apr 30 17:34:47 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * configure.in: remove last list reference.
 
+Mon Apr 30 14:22:25 EDT 2001 Adam Heath <doogie@debian.org>
+
+  * debian/changelog: Recompile for 1.9.2, to fix badly generated
+    dpkg-divert.
+
 Mon Apr 30 10:04:36 CDT 2001 Adam Heath <doogie@debian.org>
 
   * lib/mlib.c: EAGAIN patch from 1.8 branch was not applied to HEAD.
@@ -25,6 +30,10 @@ Mon Apr 30 02:35:02 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * debian/control: update section and priorities to match the dinstall
     overrides
+
+Sat Apr 28 16:34:24 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * version-nr: Oops, forgot to update this.
 
 Sat Apr 28 16:17:58 CDT 2001 Adam Heath <doogie@debian.org>
 
