--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,12 @@ dpkg (1.10) unstable; urgency=low
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
  
+dpkg (1.9.2) unstable; urgency=low
+
+  * Recompile, to fix incorrect path 1.9.1/dpkg-divert. Closes: Bug#95845
+
+ -- Adam Heath <doogie@debian.org>  Mon, 30 Apr 2001 14:21:28 -0400
+
 dpkg (1.9.1) unstable; urgency=low
 
   * Fix segfault with empty status and available, and when missing a
