Check for __va_copy, and use it, instead of a direct assignment, for broken arches, like ppc.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue May  1 00:24:49 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * acconfig.h, config.h.bot, configure.in, lib/varbuf.c, debian/changelog:
+    Check for __va_copy, and use it, instead of a direct assignment, for
+    broken arches, like ppc.
+  
 Mon Apr 30 17:34:47 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * configure.in: remove last list reference.
