--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,12 @@ dpkg (1.10) unstable; urgency=low
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
  
+dpkg (1.9.3) unstable; urgency=low
+
+  * Fix compiles on ppc. Closes: Bug#95918.
+
+ -- Adam Heath <doogie@debian.org>  Tue,  1 May 2001 00:29:45 -0500
+   
 dpkg (1.9.2) unstable; urgency=low
 
   * Recompile, to fix incorrect path 1.9.1/dpkg-divert. Closes: Bug#95845
