If --without-zlib was given, and static programs were enabled, the compile would fail.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed May  2 12:32:24 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * configure.in: If --without-zlib was given, and static programs were
+    enabled, the compile would fail.
+
 Tue May  1 23:05:48 CDT 2001 Adam Heath <doogie@debian.org>
 
   * lib/parse.c: Oops.  EOF_mmap was incorrectly detecting the end of the
