swap j and k keybindings in main menu

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri May  4 00:19:05 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * dselect/main.cc: oops, swapped j and k key bindings for main menu
+
 Wed May  2 20:41:10 CDT 2001 Adam Heath <doogie@debian.org>
 
   * include/dpkg.h.in, main/Makefile.in main/enquiry.c main/main.c,
