--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Sat May  5 00:49:31 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * pl/cs.po: Updated
+  * pl/de.po: Updated
+  * po/pl.po: Updated
+  * dselect/pkgtop.cc: Mark another strang as translatable
+
 Fri May  4 00:19:05 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * dselect/main.cc: oops, swapped j and k key bindings for main menu
