--- a/po/cs.po
+++ b/po/cs.po
@@ -7,9 +7,9 @@
 # Vladimir Michl <Vladimir.Michl@seznam.cz>
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg 1.9.0\n"
+"Project-Id-Version: dpkg 1.9.4\n"
 "POT-Creation-Date: 2001-04-24 19:43+0200\n"
-"PO-Revision-Date: 2001-04-24 19:49+02:00\n"
+"PO-Revision-Date: 2001-05-02 13:37+02:00\n"
 "Last-Translator: Petr Cech <cech@debian.org>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -4343,7 +4343,7 @@ msgstr "a"
 
 #: dselect/main.cc:73
 msgid "[U]pdate"
-msgstr "[A[ktualizuj"
+msgstr "[A]ktualizuj"
 
 #: dselect/main.cc:73
 msgid "Update list of available packages, if possible."
@@ -4391,7 +4391,7 @@ msgstr "o"
 
 #: dselect/main.cc:77
 msgid "[R]emove"
-msgstr "[O]dstrò"
+msgstr "[O]dstraò"
 
 #: dselect/main.cc:77
 msgid "Remove unwanted software."
@@ -4431,12 +4431,10 @@ msgstr ""
 "Verze %s.\n"
 "Copyright (C) 1994-1996 Ian Jackson.\n"
 "Copyright (C) 2000 Wichert Akkerman.\n"
-"Toto je volnì ¹iøitelné programové vybavení; podrobnosti o pravidlech "
-"kopírování\n"
-"naleznete v Obecné veøejné licenci GNU (GNU General Public Licence) verze 2 "
-"nebo\n"
-"pozdìj¹í. Toto programové vybavení je absolutnì bez záruky. Pou¾itím\n"
-"dselect --licence získáte více informací.\n"
+"Toto je volnì ¹iøitelné programové vybavení; podrobnosti o pravidlech\n"
+"kopírování naleznete v Obecné veøejné licenci GNU (GNU General Public\n"
+"Licence) verze 2 nebo pozdìj¹í. Toto programové vybavení je absolutnì\n"
+"bez záruky. Pou¾itím dselect --licence získáte více informací.\n"
 
 #: dselect/main.cc:102
 msgid ""
