--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun May  6 13:20:07 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/archives.c: add safe_read() to read from a pipe and deal
+    with partial reads. Modify tarobject() and tarfileread() to use
+    those.
+
 Sat May  5 00:49:31 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * pl/cs.po: Updated
