--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon May  7 23:04:55 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/dump.c: break up an assertion so it is easier to figure out what
+    went wrong.
+
 Sun May  6 13:20:07 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * main/archives.c: add safe_read() to read from a pipe and deal
