--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon May  7 23:07:01 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/depcon.c: restore previous statement to break reverse cycles 
+
 Mon May  7 23:04:55 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * main/dump.c: break up an assertion so it is easier to figure out what
