Fix some gcc 3.0 warnings.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon May 28 16:19:51 CDT 2001  Adam Heath <doogie@debian.org>
+
+  * dpkg-deb/extract.c, dselect/main.cc, lib/database.c, main/help.c,
+    main/main.c, split/info.c, utils/start-stop-daemon.c: Fix some
+    gcc 3.0 warnings.
+
 Mon May  7 23:07:01 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * main/depcon.c: restore previous statement to break reverse cycles 
