--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Mon May 28 16:23:26 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * doc/ja/822-date.1, doc/ja/Makefile.in, doc/ja/cleanup-info.8,
+    doc/ja/deb-control.5, doc/ja/deb-old.5, doc/ja/deb.5,
+    doc/ja/dpkg-checkbuilddeps.1, doc/ja/dpkg-deb.1, doc/ja/dpkg-divert.8,
+    doc/ja/dpkg-name.1, doc/ja/dpkg-scanpackages.8,
+    doc/ja/dpkg-scansources.8, doc/ja/dpkg-statoverride.8, doc/ja/dpkg.8,
+    doc/ja/install-info.8, doc/ja/start-stop-daemon.8,
+    doc/ja/update-alternatives.8, doc/ja/update-rc.d.8: Updated.
+
 Mon May 28 16:19:51 CDT 2001  Adam Heath <doogie@debian.org>
 
   * dpkg-deb/extract.c, dselect/main.cc, lib/database.c, main/help.c,
