--- a/doc/ja/update-alternatives.8
+++ b/doc/ja/update-alternatives.8
@@ -10,7 +10,8 @@
 .\"WORD:	parameter	引き数
 .\"WORD:	generic name	一般名
 .\"WORD:	alternative	選択肢
-.TH UPDATE-ALTERNATIVES 8 "19 January 1998" "DEBIAN" "Debian GNU/Linux"
+.\"
+.TH UPDATE-ALTERNATIVES 8 "19 January 1998" "Debian Project" "dpkg utilities"
 .SH 名前
 update-alternatives \- シンボリックリンクを管理してデフォルトのコマンドを決定する
 .SH 書式
@@ -82,7 +83,7 @@ alternatives システムはその設定を変更しない。
 こうなっている理由は、システム管理者の変更が
 .I /etc
 ディレクトリ以下で行われるようにするためである。
-なぜこうするのが良いかについては FSSTND に説明がある。
+なぜこうするのが良いかについては FHS に説明がある。
 .PP
 置き換え可能な一群のファイル中のどれかを含むパッケージが
 インストール・変更・削除されると、
@@ -99,7 +100,7 @@ alternatives システムはその設定を変更しない。
 例えば
 .BR vi (1)
 エディタのいろいろな派生システムが同時にインストールされていたとすると、
-.I /usr/man/man1/vi.1
+.I /usr/share/man/man1/vi.1
 が参照する man ページは、
 .I /usr/bin/vi
 が参照する実行ファイルに対応しているべきであろう。
@@ -329,7 +330,7 @@ master の symlink
 の動作とこのマニュアルページの記述に矛盾があれば、
 実装か文書、どちらかのバグである。レポートをお願いしたい。
 .SH 著者
-Debian GNU/Linux update-alternatives is copyright 1995
+Debian update-alternatives is copyright 1995
 Ian Jackson.  It is free software; see the GNU General Public Licence
 version 2 or later for copying conditions.  There is NO warranty.
 .PP
@@ -338,14 +339,14 @@ This is free documentation; see the GNU General Public Licence
 version 2 or later for copying conditions.  There is NO WARRANTY.
 .PP
 You can find the GNU GPL in /usr/share/common-licenses/GPL on any Debian system.
-.\" .SH ACKNOWLEDGEMENTS
 .SH 関連項目
 .BR ln (1),
-FSSTND, the linux Filesystem Standard.
+FHS, the Filesystem Hierarchy Standard.
 .SH 日本語版翻訳
 中野武雄 <nakano@apm.seikei.ac.jp>
 .SH 翻訳者注
-このマニュアルページは dpkg パッケージのバージョン 1.6.12.99 に付属の
+このマニュアルページは dpkg パッケージに付属の
 .BR update-alternatives (8)
 の日本語訳である。
+翻訳対象は CVS revision が 1.7 のものである。
 
