--- a/doc/ja/start-stop-daemon.8
+++ b/doc/ja/start-stop-daemon.8
@@ -1,5 +1,5 @@
 .\" Hey, Emacs!  This is an -*- nroff -*- source file.
-.\"original revision: 1.6
+.\"original revision: 1.11
 .\"
 .\" Translated Wed May 13 17:28:56 JST 1998
 .\"	by Hidenobu NABETANI <nabetani@kern.phys.sci.osaka-u.ac.jp>
@@ -12,30 +12,26 @@
 start\-stop\-daemon \- システムデーモンプログラムの起動、停止
 .SH 書式
 .B start-stop-daemon
-.BR -S|--start
-.IR "options ... -- arguments ..."
+.BR -S | --start
+.IR options
+.RB [ \-\- ]
+.IR arguments
 .HP
 .B start-stop-daemon
-.BR -K|--stop
-.IR "options ..."
+.BR -K | --stop
+.IR options
 .HP
 .B start-stop-daemon
-.BR -H|--help
+.BR -H | --help
 .HP
 .B start-stop-daemon
-.BR -V|--version
+.BR -V | --version
 .SH 説明
 .B start\-stop\-daemon
 はシステムレベルのプロセスの生成・停止を制御するために使用される。
 また、
-.BR --exec
-、
-.BR --pidfile
-、
-.BR --user
- または 
-.BR --name
-オプションを与えることで、実行中のプロセスを見つけることができる。
+.BR --exec ", " --pidfile ", " --user ", and " --name " options,"
+はオプションを与えることで、実行中のプロセスを見つけることができる。
 
 .BR --start
 を使用すると、
@@ -54,7 +50,10 @@ start\-stop\-daemon \- システムデーモンプログラムの起動、停止
 コマンドライン上で
 .BR --
 以降に与えられた任意の引数は起動されるプログラムにそのまま引き
-渡される。
+渡される。もし
+.B --retry
+が指定された場合、start-stop-daemonはそのプロセスが終了したかどうかを
+確認する。
 
 .BR --stop
 を使用すると、
@@ -74,24 +73,24 @@ start\-stop\-daemon \- システムデーモンプログラムの起動、停止
 .SH オプション
 
 .TP
-.I -x|--exec executable
+\fB-x\fP|\fB--exec\fP \fIexecutable\fP
 (
 .B /proc/
 .I pid
 .B /exe 
 により)指定された executable のプロセスを調べる。
 .TP
-.I -p|--pidfile pid-file
+\fB-p\fP|\fB--pidfile\fP \fIpid-file\fP
 .I pid-file
 で指定されるプロセスIDを持つプロセスを調べる。
 .TP
-.I -u|--user username|uid
+\fB-u\fP|\fB--user\fP \fIusername\fP|\fIuid\fP
 .I username 
 または
 .I uid
 で指定されるユーザが所有するプロセスを調べる。
 .TP
-.I -n|--name process-name
+\fB-n\fP|\fB--name\fP \fIprocess-name\fP
 (
 .B /proc/
 .I pid
@@ -100,12 +99,61 @@ start\-stop\-daemon \- システムデーモンプログラムの起動、停止
 .I process-name
 という名のプロセスを調べる。
 .TP
-.I -s|--signal signal
+\fB-s\fP|\fB--signal\fP \fIsignal\fP
 .BR --stop
 が与えられた時、プロセスを停止するために送るシグナルを指定する
 (デフォルトは 15)。
 .TP
-.I -a|--startas pathname
+\fB-R\fP|\fB--retry\fP \fItimeout\fP|\fIschedule\fP
+同時に
+.BR --stop
+が与えられると
+.B start-stop-daemon
+はどのプロセスを終了させるかを確認する。
+マッチした実行中のプロセスが全て終了するまで繰り返し確認する。
+もしプロセスが終了しなければ、
+.I schedule
+により決定される
+別のアクションが実行される。
+もし
+.I timeout
+が
+.I schedule
+のかわりに指定されていると、
+.IB signal / timeout /KILL/ timeout
+が使われる。ここで
+.I signal
+は 
+.BR --signal 
+で指定されるシグナルである。
+
+.I schedule
+はスラッシュ
+.RB ( / )
+で区切られた少なくとも2つの要素からなるリストである。
+それぞれの要素は
+.BI - signal-number
+もしくは [\fB\-\fP]\fIsignal-name\fP
+の場合は送るべきシグナル、
+.IR timeout 
+の場合はプロセスが終了するのを待つ秒数、
+.BR forever
+の場合はもし必要なら残りの
+.I schedule
+を繰り返し適用することを意味する。
+
+もし
+.I schedule
+を全て使って、
+.BR forever
+が指定されていない場合は、
+.B start-stop-daemon
+はエラー状態 2 で終了する。
+もし
+.I schedule 
+が指定されていれば、
+.B --signal
+で指定したシグナルは無視される。
 同時に
 .B --start
 が与えられると、
@@ -114,47 +162,58 @@ start\-stop\-daemon \- システムデーモンプログラムの起動、停止
 .B --exec
 に与えられる引数がデフォルトになる。
 .TP
-.I -t|--test
+.BR -t | --test
 実行しようとする処理内容を出力し，それに伴い適切な返り値が設定される
 が、実際の処理は行わない。
 .TP
-.I -o|--oknodo
+.BR -o | --oknodo
 処理が何も行われない(又は、行なわれようともしなかった)場合、
 終了ステータス 1 のかわりに 0 を返す。
 .TP
-.I -q|--quiet
+.BR -q | --quiet
 参考情報を出力しない。エラーメッセージのみ表示。
 .TP
-.I -c|--chuid
-処理を開始する前に指定されたユーザ名/ユーザ ID に変更する。':' の後に
+\fB-c\fP|\fB--chuid\fP \fIusername\fR|\fIuid\fP
+処理を開始する前に指定されたユーザ名/ユーザ ID に変更する。
+.BR ':'
+の後に
 グループ名またはグループ ID を与えることによりグループも指定できる。
-これは `chown' コマンドと同じ書式 (user:group) である。このオプションを
-使用した時には、`group' オプションが指定されていない場合であってもプライ
-マリグループと補助グループは同様に設定されることを理解していなければなら
-ない。グループオプションは、(`nobody' のような一般的ユーザに対してプロセ
-ス単位でグループに追加するというように)ユーザが通常のメンバーでないグルー
-プを指定する場合にのみ使用する。
+これは `chown' コマンドと同じ書式 (\fIuser\fP\fB:\fP\fIgroup\fP)
+である。このオプションを
+使用した時には、
+.B --group
+オプションが指定されていない場合であってもプライマリグループと
+補助グループは同様に設定されることを理解していなければなら
+ない。
+.B --group 
+オプションは、(
+.B nobody
+のような一般的ユーザに対してプロセス単位でグループに追加するというように)
+ユーザが通常のメンバーでないグループを指定する場合にのみ使用する。
 .TP
-.I -r|--chroot root
+\fB-r\fP|\fB--chroot\fP \fIroot\fP
 処理を開始する前に、
-.B root
+.I root
 に chdir と chroot を実行する。pidfile は chroot 後に、書き出されること
 に注意する。
 .TP
-.I -b|--background
+.BR -b | --background
 典型的には、デーモンプロセスを切り離せないプログラムで使用される。このオプ
 ションを指定した場合、
 .B start-stop-daemon
 は自分自身を対象プロセスの実行前に fork し、以後バックグラウンドで処理を行う。
-.B 警告:
-start-stop-daemon は
+.B 警告: start-stop-daemon 
+は
 .B 何らかの理由
 によって処理の実行に失敗した場合に、その終了ステータスをチェックできない。
 このオプションは最終手段であり、自分から fork することに意味のないプログ
 ラムや、fork を自分で行うためのコードを追加できないプログラムのみでの使用
 を意図している。
 .TP
-.I -m|--make-pidfile
+.BR -N | --nicelevel
+プロセスを開始する前にプロセスのプライオリティを変更する。
+.TP
+.BR -m | --make-pidfile
 自分自身で PID ファイルを作成しないプログラムを起動する際に使用する。
 このオプションにより、処理の実行直前に
 .B start-stop-daemon
@@ -169,21 +228,22 @@ start-stop-daemon は
 .B --background
 オプションと併用する場合にのみ有用である。
 .TP
-.I -v|--verbose
+.BR -v | --verbose
 詳しい参考情報を出力する。
 .TP
-.I -H|--help
+.BR -H | --help
 ヘルプ情報を出力して終了する。
 .TP
-.I -V|--version
+.BR -v | --verbose
 バージョン情報を出力して終了する。
 
 .SH 著者
-Ian Jackson <ijackson@gnu.ai.mit.edu>
-
-Marek Michalkiewicz <marekm@i17linuxb.ists.pwr.wroc.pl>
+Marek Michalkiewicz <marekm@i17linuxb.ists.pwr.wroc.pl> 
+がIan Jackson <ian@chiark.greenend.org.uk>による以前のバージョンを
+元に作成。
 
 このマニュアルは Klee Dienes <klee@mit.edu> によって書かれた。
+一部 Ian Jackson による整形。
 
 .SH 翻訳者
 鍋谷 栄展 <nabe@debian.or.jp>
