--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon May 28 16:40:19 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * po/it.po: Updated.
+
 Mon May 28 16:27:43 CDT 2001 Adam Heath <doogie@debian.org>
 
   * main/archives.c: If extracting a directory, and it doesn't already
