--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,16 @@ dpkg (1.10) unstable; urgency=low
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
  
+dpkg (1.9.7) unstable; urgency=low
+
+  * If a new file doesn't exist on disk, but is a going to be installed as
+    a directory, then don't error out.  Closes: Bug#17381.
+  * Update japanese manpages.  Closes: Bug#97831.
+  * Update it.po.  Closes: Bug#98273.
+  * Fix bad cleanup in dpkg-divert.  Closes: Bug#98578,#98828,#98831.
+
+ -- Adam Heath <doogie@debian.org>  Mon, 28 May 2001 18:59:03 -0500
+
 dpkg (1.9.4) unstable; urgency=low
 
   * Oops.  EOF_mmap incorrectly detecting the end of the data block.
