--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon May 28 19:07:15 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * debian/changelog: Update for 1.9.7.
+
 Mon May 28 19:02:52 CDT 2001 Adam Heath <doogie@debian.org>
 
   * scripts/dpkg-divert.pl: Fix cleanup of .dpkg-devert.tmp files.
