* configure.in: AC_REQUIRE is not valid outside of AC_DEFUN. * automake/dpkg.m4: DPKG_CACHED_TRY_COMPILE was defined with both AC_DEFUN() AND define().

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon May 28 22:54:35 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * configure.in: AC_REQUIRE is not valid outside of AC_DEFUN.
+  * automake/dpkg.m4: DPKG_CACHED_TRY_COMPILE was defined with both
+    AC_DEFUN() AND define().
+ 
 Mon May 28 19:07:15 CDT 2001 Adam Heath <doogie@debian.org>
 
   * debian/changelog: Update for 1.9.7.
