--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue May 29 07:27:31 CEST 2001 peter karlsson <peterk@debian.org>
+
+  * po/sv.po: Updated.
+
 Mon May 28 22:54:35 CDT 2001 Adam Heath <doogie@debian.org>
 
   * configure.in: AC_REQUIRE is not valid outside of AC_DEFUN.
