Remove leading and trailing spaces from versions, and check if there are embedded spaces in versions.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Jun  2 14:09:28 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * lib/parsehelp.c: Remove leading and trailing spaces from versions, and
+    check if there are embedded spaces in versions.
+
 Tue May 29 07:27:31 CEST 2001 peter karlsson <peterk@debian.org>
 
   * po/sv.po: Updated.
