--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jun  2 14:48:35 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-checkbuilddeps.pl: Handle varied use of spaces.
+
 Sat Jun  2 14:09:28 CDT 2001 Adam Heath <doogie@debian.org>
 
   * lib/parsehelp.c: Remove leading and trailing spaces from versions, and
