Reset SIGPIPE back to a default handler, for callers that have it masked off.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Jun  2 15:04:09 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-source.pl: Reset SIGPIPE back to a default handler, for
+    callers that have it masked off.
+
 Sat Jun  2 14:48:35 CDT 2001 Adam Heath <doogie@debian.org>
 
   * scripts/dpkg-checkbuilddeps.pl: Handle varied use of spaces.
