Remove bogus check of $!.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jun  2 15:09:01 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-architecture.pl: Remove bogus check of $!.
+
 Sat Jun  2 15:04:09 CDT 2001 Adam Heath <doogie@debian.org>
 
   * scripts/dpkg-source.pl: Reset SIGPIPE back to a default handler, for
