Update French translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Jun  8 19:42:43 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/fr.po: updated
+
 Sat Jun  2 15:09:01 CDT 2001 Adam Heath <doogie@debian.org>
 
   * scripts/dpkg-architecture.pl: Remove bogus check of $!.
