don't include curses.h since dselect.h already does that for us

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Sat Jun  9 00:28:11 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * Merge changes from v19 branch:
+    + archtable: add i386-gnu0.2
+    + dpkg-deb/extract.c: More %z format fixes.
+    + dselect/method.cc: don't include curses.h since dselect.h already
+      does that for us
+    + dselect/method.cc: handle interrupted getc in falliblesubprocess()
+      prompt
+
 Fri Jun  8 19:42:43 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * po/fr.po: updated
