Improve description of --force-confdef

--- a/main/dpkg.8
+++ b/main/dpkg.8
@@ -384,9 +384,9 @@ If a conffile has been modified always keep the old version without prompting.
 
 \fBconfdef\fP:
 If a conffile has been modified always choose the default action. If
-\fB--force-confnew\fP or \fB--force-confold\fP have also been given
-always default. If there is no default then we use the old or new
-version, depending on the option given.
+there is no default action it will stop to ask the user unless 
+\fB--force-confnew\fP or \fB--force-confold\fP is also been given, in
+which case it will use that to decide the final action.
 
 \fBoverwrite\fP:
 Overwrite one package's file with another's file.
