--- a/scripts/dpkg-checkbuilddeps.1
+++ b/scripts/dpkg-checkbuilddeps.1
@@ -1,11 +1,11 @@
 .TH DPKG-CHECKBUILDDEPS 1 "February 2001" "Debian project" "dpkg utililties"
 .SH NAME
-dpkg-checkbuilddeps -- check build dependancies and conflicts
+dpkg-checkbuilddeps -- check build dependencies and conflicts
 .SH SYNOPSIS
 \fBdpkg-checkbuilddeps\fR -B [\fIcontrol-file\fR]
 .SH DESCRIPTION
 This program checks the installed packages in the system against the build
-dependancies and build conflicts listed in the control file. If any are
+dependencies and build conflicts listed in the control file. If any are
 not met, it displays them and exits with a nonzero return code.
 .P
 By default, \fBdebian/control\fR is read, but an alternate control filename
