--- a/scripts/dpkg-source.1
+++ b/scripts/dpkg-source.1
@@ -603,10 +603,10 @@ Passed unchanged to
 .BR dpkg-source .
 .TP
 .B -D
-Check build dependancies and conflicts; abort if unsatisfied.
+Check build dependencies and conflicts; abort if unsatisfied.
 .TP
 .B -d
-Do not check build dependancies and conflicts.
+Do not check build dependencies and conflicts.
 .SH DPKG-DISTADDFILE ARGUMENTS
 .B dpkg-distaddfile
 does not take any non-common options.  It takes three non-option
