fix format args for size_t

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,14 @@ Sat Jun  9 00:28:11 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
     + main/dpkg.8: it's /etc/dpkg/dpkg.cfg, not /etc/dpkg.cfg
     + main/dpkg.8: Improve description of --force-confdef
     + main/help.c: don't ignore failed maintainer scripts
+    + scripts/dpkg-architecture.pl: spell dependency consistently
+    + scripts/dpkg-checkbuilddeps.1: spell dependency consistently
+    + scripts/dpkg-source.1: spell dependency consistently
+    + scripts/dpkg-buildpackage: fix pausing logic, and use $changedby as the
+      signing ID
+    + scripts/dpkg-checkbuilddeps.pl: Handle varied use of spaces.
+    + scripts/dpkg-checkbuilddeps.pl: handle multi-line fields
+    + scripts/dpkg-divert.pl: fix test for illegal packagename
 
 Fri Jun  8 19:42:43 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
