Add recent changes

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 Sat Jun  9 00:28:11 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
+  * debian/changelog: import 1.9 releases
   * Merge changes from v19 branch:
     + archtable: add i386-gnu0.2
     + dpkg-deb/extract.c: More %z format fixes.
@@ -25,6 +26,8 @@ Sat Jun  9 00:28:11 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
     + scripts/dpkg-checkbuilddeps.pl: Handle varied use of spaces.
     + scripts/dpkg-checkbuilddeps.pl: handle multi-line fields
     + scripts/dpkg-divert.pl: fix test for illegal packagename
+    + split/info.c: Change format string, to handle size_t.
+    + utils/start-stop-daemon.c: consistently use pid_t and uid_t
 
 Fri Jun  8 19:42:43 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
