--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jun 09 10:48:14 CEST 2001 peter karlsson <peterk@debian.org>
+
+  * po/sv.po, doc/sv/dpkg.8: Updated
+
 Sat Jun  9 00:28:11 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * debian/changelog: import 1.9 releases
