--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jun 20 18:56:35 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/help.c: actually use narglist in do_script()
+
 Wed Jun 20 11:28:25 CDT 2001 Adam Heath <doogie@debian.org>
 
   * Merged in changes from 1.9.10 to 1.9.11 branch.
