Added Russion translations from Alexey Mahotkin

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Jun 30 01:48:15 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * doc/ru/*: Added Russion translations from Alexey Mahotkin
+    <alexm@hsys.msk.ru>
+
 Mon Jun 25 03:31:55 CDT 2001 Adam Heath <doogie@debian.org>
 
   * Merged in changes from 1.9.11 to 1.9.14 branches.
