--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 Sat Jun 30 01:48:15 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
-  * doc/ru/*: Added Russion translations from Alexey Mahotkin
+  * doc/ru/*: Added Russian translations from Alexey Mahotkin
     <alexm@hsys.msk.ru>
 
 Mon Jun 25 03:31:55 CDT 2001 Adam Heath <doogie@debian.org>
@@ -42,7 +42,6 @@ Mon Jun 25 03:31:55 CDT 2001 Adam Heath <doogie@debian.org>
       Plumb.
     + scripts/dpkg-source.pl: Grumble.  Fix case where top-dir in
       orig.tar.gz was renamed to .orig.
-    + main/help.c: actually use narglist in do_script()
 
 Fri Jun 22 19:26:41 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
