--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,7 @@ dpkg (1.10) unstable; urgency=low
 
   * Fixed upper/lowercase problems with package names. Closes: Bug#58091
     (and 3 others).
-  * Add Russion manual pages
+  * Add Russian manual pages
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
