--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Jul  1 16:12:30 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * main/archives.c: When a package is on hold, -E will not skip the same
+    version when installing.
+
 Sat Jun 30 01:48:15 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * doc/ru/*: Added Russian translations from Alexey Mahotkin
