--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ dpkg (1.10) unstable; urgency=low
   * Fixed upper/lowercase problems with package names. Closes: Bug#58091
     (and 3 others).
   * Add Russian manual pages
+  * When a package is set to hold, and a reinstallation is requested,
+    -E will not properly skip it.  Closes: #45787.
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
