Fix layout problem

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Jul  6 00:27:17 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+ * scripts/dpkg-divert.8: Fix layout error in synopsis
+
 Sun Jul  1 16:12:30 CDT 2001 Adam Heath <doogie@debian.org>
 
   * main/archives.c: When a package is on hold, -E will not skip the same
