--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ dpkg (1.10) unstable; urgency=low
   * When a package is set to hold, and a reinstallation is requested,
     -E will not properly skip it.  Closes: #45787.
   * Make dpkg-checkbuilddeps use dpkg-architecture. Closes: Bug#104230
+  * Improve dpkg-archtecture documentation. Closes: Bug#104232
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
