--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Jul 13 00:43:23 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-architecture.pl: improve documentation
+
 Mon May 21 03:48:29 CEST 2001 Marcus Brinkmann <brinkmd@debian.org>
 
   * scripts/dpkg-checkbuilddeps.pl: Call dpkg-architecture instead dpkg
