--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Jul 13 00:46:02 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/de.po: New version
+
 Fri Jul 13 00:43:23 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-architecture.pl: improve documentation
