--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ dpkg (1.10) unstable; urgency=low
     -E will not properly skip it.  Closes: #45787.
   * Make dpkg-checkbuilddeps use dpkg-architecture. Closes: Bug#104230
   * Improve dpkg-archtecture documentation. Closes: Bug#104232
+  * Update German translation. Closes: Bug#97239
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
