Start adding German manpages

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ dpkg (1.10) unstable; urgency=low
   * Make dpkg-checkbuilddeps use dpkg-architecture. Closes: Bug#104230
   * Improve dpkg-archtecture documentation. Closes: Bug#104232
   * Update German translation. Closes: Bug#97239
+  * Add German md5sum manpage
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
