--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Jul 13 00:54:24 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * doc/de/Makefile.in, doc/de/md5sum.1: added
+  * configure.in, doc/Makefile.in: Process German documentation
+
 Fri Jul 13 00:46:02 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * po/de.po: New version
