--- a/dpkg-deb/dpkg-deb.1
+++ b/dpkg-deb/dpkg-deb.1
@@ -170,7 +170,7 @@ format.  Together with
 this can be used to extract a particular file from a package archive.
 .TP
 .BR --control ", " -e
-Extracs the control information files from a package archive into the
+Extracts the control information files from a package archive into the
 specified directory.
 
 If no directory is specified then a subdirectory
