--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,9 @@ dpkg (1.10) unstable; urgency=low
   * Improve dpkg-archtecture documentation. Closes: Bug#104232
   * Update German translation. Closes: Bug#97239
   * Add German md5sum manpage
+  * Improve dselect manpage. Closes: Bug#103839
+  * dpkg-name(1) no longer mentions the non-existing dpkg(5) manpage.
+    Closes: Bug#104214
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
