--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jul 14 01:18:33 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * doc/de/Makefile.in: fix syntax error
+
 Fri Jul 13 20:39:24 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * doc/deb-old.5, doc/deb.5: remove emacs hints and Linux references
