Document dselect split

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+Sun Jul 15 00:37:13 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * debian/preinst: removed (we now use dpkg.preinst)
+  * debian/control:
+    + add dselect package
+    + fix section of dpkg-doc
+  * debian/dpkg.conffiles: remove dselect.cfg
+  * debian/dselect.{conffiles,postinst,prerm}: added
+  * debian/rules: 
+    + add German to list of manpage translations
+    + split out dselect into its own package
+    + strip enoent and start-stop-daemon as well
+
 Sat Jul 14 23:35:57 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * dselect/main.cc, dpkg/main.c: add per-user configuration file
