--- a/debian/changelog
+++ b/debian/changelog
@@ -15,7 +15,9 @@ dpkg (1.10) unstable; urgency=low
     Closes: Bug#104214
   * Improve handling of Recommends and Suggests in dselect
   * Add per-user configuration files. Closes: Bug#103845
-
+  * Split dselect into its own package. dpkg Pre-Depends on it
+    to make sure no weird things happen during an upgrade but this
+    will allow us to make dselect option at some point in the future.
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
