include unistd.h which is needed to get the ioctl prototype on Solaris

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Jul 16 00:01:24 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * dselect/baselist.cc: include unistd.h which is needed to get the
+    ioctl prototype on Solaris
+
 Sun Jul 15 00:37:13 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * debian/preinst: removed (we now use dpkg.preinst)
