Restore missing changelog entries

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ dpkg (1.10) unstable; urgency=low
   * Fixed upper/lowercase problems with package names. Closes: Bug#58091
     (and 3 others).
   * Add Russian manual pages
+  * Fix n in dselect package list (performs searchagain now)
   * Fix layout problem in dpkg-divert manpage. Closes: Bug#103667
   * When a package is set to hold, and a reinstallation is requested,
     -E will not properly skip it.  Closes: #45787.
