Add configurable colours to dselect

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Mon Jul 16 01:50:58 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * Merge a reworked version of a patch from Joey Hess
+    + dselect/dselect.8: Document new colour options
+    + dselect/basecmds.cc: properly draw the background using helpscreen_attr
+    + dselect/baselist.cc: change drawing code to use new changeable colours
+    + dselect/dselect.h: Add all the colour structures
+    + dselect/main.cc: Parse --colour options
+
 Mon Jul 16 00:01:24 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * dselect/baselist.cc: include unistd.h which is needed to get the
