dselect help improvements

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Jul 16 13:27:44 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * Merge a modified patch from Josip Rodin:
+    + dselect/basecmds.cc: Improve some help texts and helpscreen keybindings
+    + dselect/helpmsgs.src: Improve text
+
 Mon Jul 16 12:55:49 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * utils/start-stop-daemon.c: Fix test for nice(2) failure
