Force LC_CTYPE to C

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Jul 16 15:20:07 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/main.c, main/query,c. dselect/main.cc: use C locale for LC_CTYPE
+    so we can be sure packagename and version comparisons work as expected
+
 Mon Jul 16 14:10:18 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * lib/vercmp.c: New verrevcmp() from Anthony Towns
