dselect can handle handle regular-expressions search for packages, both names and descriptions.

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,8 @@ dpkg (1.10) unstable; urgency=low
   * Improve the dselect helpscreen a bit. Closes: Bug#72634
   * New version comparison routine that can handle arbitrarily large numbers
     and accepts `~' as a low-sorting character. Closes: Bug#93386
+  * dselect now accepts regular expressions when searching for packages
+    and can search in package descriptions as well. Closes: Bug#81009
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
