--- a/debian/changelog
+++ b/debian/changelog
@@ -27,7 +27,8 @@ dpkg (1.10) unstable; urgency=low
   * New version comparison routine that can handle arbitrarily large numbers
     and accepts `~' as a low-sorting character. Closes: Bug#93386
   * dselect now accepts regular expressions when searching for packages
-    and can search in package descriptions as well. Closes: Bug#81009
+    and can search in package descriptions as well.
+    Closes: Bug#81009,#83139
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
